appointment endpoint refactoring